--- a/src/main/java/com/wjz/awesomemarket/todo.txt
+++ b/src/main/java/com/wjz/awesomemarket/todo.txt
@@ -1,6 +1,9 @@
 物品被卖出后，应该把金钱放到暂存箱里面。√ 换了另一种方式
 制作数据统计头颅。√
+写下架功能√
+bug:下架的物品没显示在暂存箱里，需要改进。√
 
-写下架功能
-
-bug:下架的物品没显示在暂存箱里，需要改进。
+OP能看玩家销售记录
+还能看玩家仓库
+下架玩家物品
+实现/amt view player
