--- a/src/main/java/com/wjz/awesomemarket/todo.txt
+++ b/src/main/java/com/wjz/awesomemarket/todo.txt
@@ -6,4 +6,6 @@ bug:下架的物品没显示在暂存箱里，需要改进。√
 OP能看玩家销售记录
 还能看玩家仓库
 下架玩家物品
-实现/amt view player
+实现/amt view player (目前已写完但是有bug无法使用)
+购买确认界面的小动画
+实现根据手中物品自动搜索商场同类型物品的指令。
